update gradle and mappings